[package]
name = "lamellar_aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
futures = "0.3.29"
#lamellar = "0.6.0"
#lamellar = { path = "../../lamellar-runtime-junction" }
lamellar = { git = "https://github.com/pnnl/lamellar-runtime.git" }
once_cell = "1.18.0"
